AbstractConverter simplified